--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body.comfort {
       rgba(43, 18, 63, 0.75),
       rgba(43, 18, 63, 0.85)
     ),
-    url("bts-hard.jpg");
+    url("bts-hero.jpg");
 
   background-size: cover;
   background-position: center top; 
@@ -137,6 +137,7 @@ footer {
   border-radius: 15px;
   margin-bottom: 10px;
 }
+
 
 
 
