--- a/style.css
+++ b/style.css
@@ -137,6 +137,24 @@ h1 {
   opacity: 0.85;
 }
 
+.army-section {
+  text-align: center;
+}
+
+.army-quote-box {
+  max-width: 700px;
+  margin: 40px auto 0;
+  padding: 40px;
+  border-radius: 25px;
+  background: rgba(255, 255, 255, 0.08);
+}
+
+.army-quote-box p {
+  font-size: 1.05rem;
+  font-style: italic;
+  line-height: 1.8;
+  opacity: 0.9;
+}
 
 
 
@@ -145,6 +163,7 @@ footer {
   padding: 40px;
   opacity: 0.7;
 }
+
 
 
 
