--- a/style.css
+++ b/style.css
@@ -233,9 +233,13 @@ footer {
 .concert-break img {
   width: 85%;
   max-width: 1100px;
+  height: 420px;              
+  object-fit: cover;          
   border-radius: 30px;
   opacity: 0.9;
 }
+
+
 
 
 
