--- a/style.css
+++ b/style.css
@@ -164,6 +164,11 @@ footer {
   opacity: 0.7;
 }
 
+footer p {
+  font-size: 0.95rem;
+  letter-spacing: 1px;
+}
+
 .army-quote-wrapper {
   display: flex;
   align-items: center;
@@ -250,6 +255,7 @@ footer {
   border-radius: 30px;
   opacity: 0.95;
 }
+
 
 
 
